Đã hoàn thành giao diện

--- a/e-commerce/gomallclient/src/Component/Navbar/Navbar.css
+++ b/e-commerce/gomallclient/src/Component/Navbar/Navbar.css
@@ -160,6 +160,12 @@
   transition: all 0.3s;
 }
 
+.dropdown-menu.open {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
 .dropdown:hover .dropdown-menu {
   opacity: 1;
   visibility: visible;
