--- a/e-commerce/gomallclient/src/Component/Signup/signup.css
+++ b/e-commerce/gomallclient/src/Component/Signup/signup.css
@@ -18,7 +18,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .signup-container h2 {
@@ -31,7 +31,7 @@
 
 .form-group {
   margin-bottom: 20px;
-  width: 100%;
+  width: 30%;
 }
 
 .form-label {
